# Deepdub-Automated-Media-QC-Engine

./: .gitignore  CLAUDE.md  DEEPDUB_QC_CLAUDE_CODE_HANDOFF.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: server.example.yaml
docs/: ARCHITECTURE.md  BACKLOG.md  DATA_MODEL_REVIEW.md  DECISIONS.md  RISKS.md  ROADMAP.md  VALIDATION.md  server-config-spec.md  server-gui-spec.md  windows-deployment.md
docs/adr/: 0004-local-web-gui-on-shared-rdp-host.md
docs/design/: gui-design-spec.md
presets/clients/alphorn/: ad_full_mix_v1.yaml
presets/clients/marimba/: deliver_audio_v1.yaml  delivery_v1.yaml
presets/examples/: generic_broadcast_v1.yaml
schemas/: qc-finding.schema.json  qc-job.schema.json  qc-measurement.schema.json  qc-preset.schema.json  qc-result.schema.json
scripts/: export_schemas.py  generate_test_media.py
scripts/windows/: install-service.ps1
src/deepdub_qc/: __init__.py  cli.py  exceptions.py  exit_codes.py  logging.py
src/deepdub_qc/comparison/: __init__.py  engine.py  vidchecker.py
src/deepdub_qc/detectors/: __init__.py  base.py  registry.py
src/deepdub_qc/evidence/: __init__.py  thumbnails.py
src/deepdub_qc/models/: __init__.py  asset.py  enums.py  evidence.py  finding.py  job.py  measurement.py  preset.py  report.py  rule.py  types.py
src/deepdub_qc/orchestration/: __init__.py  batch.py  pipeline.py
src/deepdub_qc/presets/: __init__.py  governance.py  loader.py
src/deepdub_qc/reports/: __init__.py  html_renderer.py  mock_result.py  (+3 more)
tests/fixtures/: ebu_manifest.yaml
tests/golden/: mock_report.json
tests/integration/: test_analyze_e2e.py  test_audio_e2e.py  test_batch_e2e.py  test_ebu_conformance.py  test_serve_e2e.py  test_video_e2e.py
tests/unit/: test_audio_parsers.py  test_cli.py  test_cli_render_mock.py  test_comparison.py  test_ffprobe_parsing.py  test_ids.py  test_job_store.py  test_language.py  test_min_rms.py  test_mock_result.py  test_models.py  test_preset_governance.py  test_preset_loader.py  test_report_renderers.py  test_rule_engine.py  test_rule_evaluators.py  test_rule_model.py  test_schema_export.py  test_server_app.py  test_server_config.py  test_server_worker.py  test_subprocess_util.py  test_video_parsers.py
(+41 files in other folders)
